--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Prueba GIT</title>
 </head>
 <body>
+    <header>
+        <p>Encabezado de página</p>
+    </header>
     <main>
         <p>Ejemplo</p>
     </main>
