--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </header>
     <main>
         <p>Ejemplo</p>
+        <p>Ejemplo 2</p>
+        <p>Ejemplo 3</p>
     </main>
     <footer>
         <p>Pie de página</p>
