--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <p>Encabezado de página</p>
     </header>
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Productos</a>
+        <a href="#">Servicios</a>
+    </nav>
     <main>
         <p>Ejemplo</p>
         <p>Ejemplo 2</p>
