--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <p>Ejemplo 4</p>
         <p>Ejemplo 5</p>
     </main>
+    <aside>
+        <section>
+            <p>Buenas tardes</p>
+        </section>
+        <section>
+            <p>Mi señor pana</p>
+        </section>
+    </aside>
     <footer>
         <p>Pie de página</p>
     </footer>
