Cambio en aside

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Buenas tardes</p>
         </section>
         <section>
-            <p>Mi señor pana</p>
+            <p>Mi señor pibardo</p>
         </section>
     </aside>
     <footer>
