Se clonan ejemplos

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <p>Ejemplo 3</p>
         <p>Ejemplo 4</p>
         <p>Ejemplo 5</p>
+        <p>Ejemplo 5</p>
+        <p>Ejemplo 5</p>
     </main>
     <aside>
         <section>
